# ESP32-Ambient-Lighting

./: .gitignore  CMakeLists.txt  README.md  index.html  sdkconfig  sdkconfig.old  update.sh
docs/: index.html  index.md
main/: CMakeLists.txt  Kconfig.projbuild  can_bus_sniffer.c  commands.c  commands.h  http_server.c  idf_component.yml  lights_controller.c  main.c  main_common.h
page/: index.md
pcb/: BOM.csv  Tesla Ambient Lighting.kicad_pcb  Tesla Ambient Lighting.kicad_prl  Tesla Ambient Lighting.kicad_pro  Tesla Ambient Lighting.kicad_sch  Tesla Ambient Lighting.step  Tesla Ambient Lighting.xml  fp-info-cache  ~Tesla Ambient Lighting.kicad_sch.lck
pcb/plots/: Tesla Ambient Lighting-B_Cu.gbr  Tesla Ambient Lighting-B_Mask.gbr  Tesla Ambient Lighting-B_Paste.gbr  Tesla Ambient Lighting-B_Silkscreen.gbr  Tesla Ambient Lighting-Edge_Cuts.gbr  Tesla Ambient Lighting-F_Cu.gbr  Tesla Ambient Lighting-F_Mask.gbr  Tesla Ambient Lighting-F_Paste.gbr  Tesla Ambient Lighting-F_Silkscreen.gbr  Tesla Ambient Lighting-NPTH.drl  Tesla Ambient Lighting-PTH.drl  Tesla Ambient Lighting-job.gbrjob  bom.csv  plots.rar  pos.csv
pcb/plots/gerber/: Tesla Ambient Lighting-CmtUser.gbr  Tesla Ambient Lighting-CuBottom.gbl  Tesla Ambient Lighting-CuTop.gtl  Tesla Ambient Lighting-EdgeCuts.gm1  Tesla Ambient Lighting-MaskBottom.gbs  Tesla Ambient Lighting-MaskTop.gts  Tesla Ambient Lighting-NPTH-drl_map.gbr  Tesla Ambient Lighting-NPTH.drl  Tesla Ambient Lighting-PTH-drl_map.gbr  Tesla Ambient Lighting-PTH.drl  Tesla Ambient Lighting-PasteBottom.gbp  Tesla Ambient Lighting-PasteTop.gtp  (+4 more)
